--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,9 @@ h4 {
   font-size: 14px;
   font-weight: 600;
 }
-
+.btn a{
+  color: whitesmoke;
+}
 a {
   color: black;
   text-decoration: none !important;
